--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
 version: '3.8'
 services:
   db:
-    image: mysql:5.7
-    volumes:
-      - db-data:/var/lib/mysql
-    restart: always
+    image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: rootpassword  # Root password is set here
       MYSQL_DATABASE: dbname
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+    volumes:
+      - ./app:/docker-entrypoint-initdb.d
+      - dbdata:/var/lib/mysql
     ports:
       - "3306:3306"
-    container_name: db_container
+    container_name: db_container  # Custom container name for the db service
 
   app:
     build: .
@@ -21,9 +19,9 @@ services:
     depends_on:
       - db
     environment:
-      MYSQL_HOST: db_container  # Updated to use the container name of the db service
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_HOST: db_container  # Connects to the db service
+      MYSQL_USER: root  # Use root user
+      MYSQL_PASSWORD: rootpassword  # Use root password set in db service
       MYSQL_DB: dbname
       SECRET_KEY: your_secret_key
     container_name: app_container
