--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: db_container
 
   app:
-    build: .
+    image: python:3.12.3
     ports:
       - "5000:5000"
     depends_on:
@@ -25,6 +25,9 @@ services:
       MYSQL_DB: dbname
       SECRET_KEY: your_secret_key
     container_name: app_container
+    volumes:
+      - .:/app
+    command: python3 app.py
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -34,8 +37,6 @@ services:
       PMA_PASSWORD: rootpassword
     ports:
       - "8080:80"
-    depends_on:
-      - db
     container_name: phpmyadmin_container
 
 volumes:
