--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3.8'
 services:
-  db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: dbname
-    volumes:
-      - ./app:/docker-entrypoint-initdb.d
-      - dbdata:/var/lib/mysql
-    ports:
-      - "3306:3306"
-    container_name: db_container
-
   app:
     build: .
     ports:
@@ -19,24 +7,32 @@ services:
     depends_on:
       - db
     environment:
-      MYSQL_HOST: db_container
-      MYSQL_USER: root
-      MYSQL_PASSWORD: rootpassword
-      MYSQL_DB: dbname
-      SECRET_KEY: your_secret_key
-    container_name: app_container
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: dbname
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+
+  db:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: dbname
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - db-data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     environment:
-      PMA_HOST: db_container
-      PMA_USER: root
-      PMA_PASSWORD: rootpassword
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: rootpassword
     ports:
       - "8080:80"
     depends_on:
       - db
-    container_name: phpmyadmin_container
 
 volumes:
-  dbdata:
+  db-data:
