--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,16 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
 
-  db:
-    image: mariadb:latest
-    volumes:
-      - db-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: dbname
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+db:
+  image: mariadb:latest
+  volumes:
+    - db-data:/var/lib/mysql
+  environment:
+    MYSQL_ROOT_PASSWORD: rootpassword
+    MYSQL_DATABASE: dbname
+    MYSQL_USER: user
+    MYSQL_PASSWORD: password
+    MARIADB_AUTO_UPGRADE: 1
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
