--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MARIADB_AUTO_UPGRADE: 1
+    ports:
+      - "3306:3306"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
