--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       MYSQL_PASSWORD: password
 
   db:
-    image: mariadb:latest
+    image: mysql:latest
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -21,7 +21,6 @@ services:
       MYSQL_DATABASE: dbname
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-      MARIADB_AUTO_UPGRADE: 1
     ports:
       - "3306:3306"
 
