--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3.8'
 services:
-  app:
+  your_service_name: # Replace `your_service_name` with the actual name of your service
     build: .
     ports:
       - "5000:5000"
@@ -14,6 +13,7 @@ services:
 
   db:
     image: mysql:latest
+    container_name: dbcontainer
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -21,15 +21,14 @@ services:
       MYSQL_DATABASE: dbname
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-    ports:
-      - "3306:3306"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     environment:
-      PMA_HOST: db
+      PMA_HOST: dbcontainer
       MYSQL_ROOT_PASSWORD: rootpassword
     ports:
       - "8080:80"
+
 volumes:
   db-data:
