--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  your_service_name: # Replace `your_service_name` with the actual name of your service
+  app:  # Replace `your_service_name` with the actual name of your service
     build: .
     ports:
       - "5000:5000"
