--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.0.1
-Flask-JWT-Extended==4.3.1
-Werkzeug==2.0.1
-Flask-Cors==3.0.10
-mysql-connector-python==8.0.23
-flask_mysqldb
-mysqlclient
+Flask==3.0.3
+Flask_Cors==4.0.1
+Flask_JWT_Extended==4.6.0
+Flask_MySQLdb==2.0.0
+flask_sqlalchemy==3.1.1
+Werkzeug==3.0.3
